==> wlshiu/STM32F103_HAL_Example/Experiment_50_EthernetMAC_Controller/HARDWARE/DM9000/dm9000.c <==
#include "dm9000.h"
#include "delay.h"
#include "led.h"
#include "usart.h"
#include "lwip_comm.h"

u8 DM9000_Init(void)
{
    u32 temp;
    GPIO_InitTypeDef GPIO_Initure;
    FSMC_NORSRAM_TimingTypeDef FSMC_ReadWriteTim;

    __HAL_RCC_GPIOD_CLK_ENABLE();               //开启GPIOD时钟
    __HAL_RCC_GPIOE_CLK_ENABLE();               //开启GPIOE时钟
    __HAL_RCC_GPIOF_CLK_ENABLE();               //开启GPIOF时钟
    __HAL_RCC_GPIOG_CLK_ENABLE();               //开启GPIOG时钟

    GPIO_Initure.Pin = GPIO_PIN_7;              //PD7
    GPIO_Initure.Mode = GPIO_MODE_OUTPUT_PP;    //推挽输出
    GPIO_Initure.Pull = GPIO_PULLUP;            //上拉
    GPIO_Initure.Speed = GPIO_SPEED_HIGH;       //高速
    HAL_GPIO_Init(GPIOD, &GPIO_Initure);

    GPIO_Initure.Pin = GPIO_PIN_6;              //PG6 DM9000中断引脚
    GPIO_Initure.Mode = GPIO_MODE_IT_FALLING;   //中断，下降沿
    HAL_GPIO_Init(GPIOG, &GPIO_Initure);

    //PD0 1 4 5 8 8 9 10 14 15
    GPIO_Initure.Pin = GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_4 | GPIO_PIN_5 | \
                       GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10 | GPIO_PIN_14 | GPIO_PIN_15;
    GPIO_Initure.Mode = GPIO_MODE_AF_PP;        //复用推挽输出
    HAL_GPIO_Init(GPIOD, &GPIO_Initure);

    //PE7 8 9 10 11 12 13 14 15
    GPIO_Initure.Pin = GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10 | \
                       GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_13 | GPIO_PIN_14 | GPIO_PIN_15;
    GPIO_Initure.Mode = GPIO_MODE_AF_PP;        //复用推挽输出
    HAL_GPIO_Init(GPIOE, &GPIO_Initure);

    //PF13
    GPIO_Initure.Pin = GPIO_PIN_13;
    GPIO_Initure.Mode = GPIO_MODE_AF_PP;        //复用推挽输出
    HAL_GPIO_Init(GPIOF, &GPIO_Initure);

    //PG9
    GPIO_Initure.Pin = GPIO_PIN_9;
    GPIO_Initure.Mode = GPIO_MODE_AF_PP;        //复用推挽输出
    HAL_GPIO_Init(GPIOG, &GPIO_Initure);

    //中断线6=PG6
    HAL_NVIC_SetPriority(EXTI9_5_IRQn, 1, 0);   //抢占优先级为1，子优先级为0
    HAL_NVIC_EnableIRQ(EXTI9_5_IRQn);           //使能中断线6

    DM9000_Handler.Instance = FSMC_NORSRAM_DEVICE;
    DM9000_Handler.Extended = FSMC_NORSRAM_EXTENDED_DEVICE;

    DM9000_Handler.Init.NSBank = FSMC_NORSRAM_BANK2;                    //使用NE2
    DM9000_Handler.Init.DataAddressMux = FSMC_DATA_ADDRESS_MUX_DISABLE; //地址/数据线不复用
    DM9000_Handler.Init.MemoryType = FSMC_MEMORY_TYPE_SRAM;             //SRAM
    DM9000_Handler.Init.MemoryDataWidth = FSMC_NORSRAM_MEM_BUS_WIDTH_16; //16位数据宽度
    DM9000_Handler.Init.BurstAccessMode = FSMC_BURST_ACCESS_MODE_DISABLE;   //是否使能突发访问,仅对同步突发存储器有效,此处未用到
    DM9000_Handler.Init.WaitSignalPolarity = FSMC_WAIT_SIGNAL_POLARITY_LOW; //等待信号的极性,仅在突发模式访问下有用
    DM9000_Handler.Init.WaitSignalActive = FSMC_WAIT_TIMING_BEFORE_WS;  //存储器是在等待周期之前的一个时钟周期还是等待周期期间使能NWAIT
    DM9000_Handler.Init.WriteOperation = FSMC_WRITE_OPERATION_ENABLE;   //存储器写使能
    DM9000_Handler.Init.WaitSignal = FSMC_WAIT_SIGNAL_DISABLE;          //等待使能位,此处未用到
    DM9000_Handler.Init.ExtendedMode = FSMC_EXTENDED_MODE_DISABLE;          //读写使用相同的时序
    DM9000_Handler.Init.AsynchronousWait = FSMC_ASYNCHRONOUS_WAIT_DISABLE;  //是否使能同步传输模式下的等待信号,此处未用到
    DM9000_Handler.Init.WriteBurst = FSMC_WRITE_BURST_DISABLE;          //禁止突发写

    //FMC读时序控制寄存器
    FSMC_ReadWriteTim.AddressSetupTime = 0x00;      //地址建立时间（ADDSET）为1个HCLK 1/72M=13.8ns
    FSMC_ReadWriteTim.AddressHoldTime = 0x00;       //地址保持时间（ADDHLD）模式A未用到
    FSMC_ReadWriteTim.DataSetupTime = 0x03;         //数据保存时间为3个HCLK =4*13.8=55ns
    FSMC_ReadWriteTim.BusTurnAroundDuration = 0X00;
    FSMC_ReadWriteTim.AccessMode = FSMC_ACCESS_MODE_A; //模式A
    HAL_SRAM_Init(&DM9000_Handler, &FSMC_ReadWriteTim, &FSMC_ReadWriteTim);

    //FMC读时序控制寄存器
    FSMC_ReadWriteTim.AddressSetupTime = 0x00;      //地址建立时间（ADDSET）为1个HCLK 1/72M=13.8ns
    FSMC_ReadWriteTim.AddressHoldTime = 0x00;       //地址保持时间（ADDHLD）模式A未用到
    FSMC_ReadWriteTim.DataSetupTime = 0x03;         //数据保存时间为3个HCLK =4*13.8=55ns
    FSMC_ReadWriteTim.BusTurnAroundDuration = 0X00;
    FSMC_ReadWriteTim.AccessMode = FSMC_ACCESS_MODE_A; //模式A
    HAL_SRAM_Init(&DM9000_Handler, &FSMC_ReadWriteTim, &FSMC_ReadWriteTim);


    temp = *(vu32 *)(0x1FFFF7E8);           //获取STM32的唯一ID的前24位作为MAC地址后三字节
    dm9000cfg.mode = DM9000_AUTO;
    dm9000cfg.queue_packet_len = 0;
    //DM9000的SRAM的发送和接收指针自动返回到开始地址，并且开启接收中断
    dm9000cfg.imr_all = IMR_PAR | IMR_PRI;
    //初始化MAC地址
    dm9000cfg.mac_addr[0] = 2;
    dm9000cfg.mac_addr[1] = 0;
    dm9000cfg.mac_addr[2] = 0;
    dm9000cfg.mac_addr[3] = (temp >> 16) & 0XFF; //低三字节用STM32的唯一ID
    dm9000cfg.mac_addr[4] = (temp >> 8) & 0XFFF;
    dm9000cfg.mac_addr[5] = temp & 0XFF;
    //初始化组播地址
    dm9000cfg.multicase_addr[0] = 0Xff;
    dm9000cfg.multicase_addr[1] = 0Xff;
    dm9000cfg.multicase_addr[2] = 0Xff;
    dm9000cfg.multicase_addr[3] = 0Xff;
    dm9000cfg.multicase_addr[4] = 0Xff;
    dm9000cfg.multicase_addr[5] = 0Xff;
    dm9000cfg.multicase_addr[6] = 0Xff;
    dm9000cfg.multicase_addr[7] = 0Xff;

    DM9000_Reset();                         //复位DM9000
    delay_ms(100);
    temp = DM9000_Get_DeiviceID();          //获取DM9000ID
    printf("DM9000 ID:%#x\r\n", temp);
    if(temp != DM9000_ID) return 1;         //读取ID错误
    DM9000_Set_PHYMode(dm9000cfg.mode);     //设置PHY工作模式

    DM9000_WriteReg(DM9000_NCR, 0X00);
    DM9000_WriteReg(DM9000_TCR, 0X00);      //发送控制寄存器清零
    DM9000_WriteReg(DM9000_BPTR, 0X3F);
    DM9000_WriteReg(DM9000_FCTR, 0X38);
    DM9000_WriteReg(DM9000_FCR, 0X00);
    DM9000_WriteReg(DM9000_SMCR, 0X00);     //特殊模式
    DM9000_WriteReg(DM9000_NSR, NSR_WAKEST | NSR_TX2END | NSR_TX1END); //清除发送状态
    DM9000_WriteReg(DM9000_ISR, 0X0F);      //清除中断状态
    DM9000_WriteReg(DM9000_TCR2, 0X80);     //切换LED到mode1
    //设置MAC地址和组播地址
    DM9000_Set_MACAddress(dm9000cfg.mac_addr);      //设置MAC地址
    DM9000_Set_Multicast(dm9000cfg.multicase_addr); //设置组播地址
    DM9000_WriteReg(DM9000_RCR, RCR_DIS_LONG | RCR_DIS_CRC | RCR_RXEN);
    DM9000_WriteReg(DM9000_IMR, IMR_PAR);
    temp = DM9000_Get_SpeedAndDuplex();     //获取DM9000的连接速度和双工状态
    if(temp != 0XFF)                        //连接成功，通过串口显示连接速度和双工状态
    {
        printf("DM9000 Speed:%dMbps,Duplex:%s duplex mode\r\n", (temp & 0x02) ? 10 : 100, (temp & 0x01) ? "Full" : "Half");
    }
    else printf("DM9000 Establish Link Failed!\r\n");
    DM9000_WriteReg(DM9000_IMR, dm9000cfg.imr_all); //设置中断
    return 0;
}

u8 DM9000_Get_SpeedAndDuplex(void)
{
    u8 temp;
    u8 i = 0;
    if(dm9000cfg.mode == DM9000_AUTO)               //如果开启了自动协商模式一定要等待协商完成
    {
        while(!(DM9000_PHY_ReadReg(0X01) & 0X0020)) //等待自动协商完成
        {
            delay_ms(100);
            i++;
            if(i > 100)return 0XFF;                 //自动协商失败
        }
    }
    else                                            //自定义模式,一定要等待连接成功
    {
        while(!(DM9000_ReadReg(DM9000_NSR) & 0X40)) //等待连接成功
        {
            delay_ms(100);
            i++;
            if(i > 100)return 0XFF;                 //连接失败
        }
    }
    temp = ((DM9000_ReadReg(DM9000_NSR) >> 6) & 0X02); //获取DM9000的连接速度
    temp |= ((DM9000_ReadReg(DM9000_NCR) >> 3) & 0X01); //获取DM9000的双工状态
    return temp;
}

void EXTI9_5_IRQHandler(void)
{
    while(DM9000_INT == 0)
    {
        DMA9000_ISRHandler();
    }
    __HAL_GPIO_EXTI_CLEAR_IT(GPIO_PIN_6);       //清除中断线6挂起标志位
}
